大量修改，包括：attachpoint，骨架调整器、食物与消化食物，动态体型调整，素材修正等...

--- a/OpenRA.Meow.RPG/OpenRA.Meow.RPG.csproj
+++ b/OpenRA.Meow.RPG/OpenRA.Meow.RPG.csproj
@@ -3,6 +3,12 @@
 	<PropertyGroup>
 		<TargetFramework>net6.0</TargetFramework>
 	</PropertyGroup>
+
+	<ItemGroup>
+	  <Compile Remove="Mechanics\Character\新文件夹\**" />
+	  <EmbeddedResource Remove="Mechanics\Character\新文件夹\**" />
+	  <None Remove="Mechanics\Character\新文件夹\**" />
+	</ItemGroup>
 	
   <ItemGroup>
     <ProjectReference Include="..\OpenRA.Game\OpenRA.Game.csproj">
