修复attachpoint的更新延迟，修改orca assult机制

--- a/mods/ts/3dtest/meshes.yaml
+++ b/mods/ts/3dtest/meshes.yaml
@@ -325,6 +325,10 @@ mmr-test:
 			Material: misc01
 			HasShadow: false
 			Shader: FlatLight
+		axisb: Axis
+			Material: black
+			HasShadow: false
+			Shader: FlatLight
 
 missile:
 	Meshes:
