--- a/OpenRA.Meow.RPG/OpenRA.Meow.RPG.csproj
+++ b/OpenRA.Meow.RPG/OpenRA.Meow.RPG.csproj
@@ -4,6 +4,14 @@
 		<TargetFramework>net6.0</TargetFramework>
 	</PropertyGroup>
 
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+	  <Optimize>False</Optimize>
+	</PropertyGroup>
+
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+	  <Optimize>True</Optimize>
+	</PropertyGroup>
+
 	<ItemGroup>
 	  <Compile Remove="Mechanics\Character\新文件夹\**" />
 	  <EmbeddedResource Remove="Mechanics\Character\新文件夹\**" />
