修复骨架解算问题，勉强修复骨骼Matrix转换WRot的计算错误，修复attachpoint旋转问题

--- a/mods/ts/3dtest/testrulse.yaml
+++ b/mods/ts/3dtest/testrulse.yaml
@@ -323,6 +323,17 @@
 	# 	ThumbnailImage: items
 	# 	UseAnim: act_putaway
 	# 	UseFrame: 24
+	AttachPoint@TEST:
+		# Offset: -215,0,533
+		# Offset: 0,0,456
+		LockFacing: True
+		# Turret: primary
+		Skeleton: body
+		BoneAttach: a-s-Rig_Head
+		# BoneAttach: a-Position
+
+	AttachManager:
+		MainSkeleton: body
 
 PFIND:
 	Inherits: ^CommonInfantry
@@ -463,6 +474,8 @@ STCMMDO:
 	UnitDisplayInfo:
 		IconSequence: pic
 		IconScale: 1
+
+
 
 RUTEST:
 	Inherits: ^Vehicle
