导入地形Type初步实现

--- a/mods/ts/maps/_TestImport2/map.yaml
+++ b/mods/ts/maps/_TestImport2/map.yaml
@@ -6,9 +6,9 @@ Title: _TestImport2
 
 Author: OpenMeow
 
-Tileset: TEMPERATE
+Tileset: SNOW #TEMPERATE
 
-TileTexSet:
+TileTexSet: Snow
 
 MapSize: 102,218
 
