--- a/mods/ts/rules/world.yaml
+++ b/mods/ts/rules/world.yaml
@@ -490,3 +490,5 @@ EditorWorld:
 		AllowedTerrainTypes: Clear, Rough, Road, DirtRoad, Green, Sand, Pavement
 		Palette: ra
 		Alpha: 0.35
+	CellTypeOverlay:
+		FootprintAlpha: 0.5
