--- a/mods/common/chrome/settings-display.yaml
+++ b/mods/common/chrome/settings-display.yaml
@@ -339,6 +339,20 @@ Container@DISPLAY_PANEL:
 									Width: PARENT_RIGHT
 									Height: 25
 									Font: Regular
+						Container@SHADOW_MODE_DROPDOWN_CONTAINER:
+							X: PARENT_RIGHT / 2 + 10
+							Width: PARENT_RIGHT / 2 - 20
+							Children:
+								Label@SHADOW_MODE:
+									Width: PARENT_RIGHT
+									Height: 20
+									Text: Shadow Mode:
+								DropDownButton@SHADOWMODE_DROPDOWN:
+									Y: 25
+									Width: PARENT_RIGHT
+									Height: 25
+									Font: Regular
+									Text: ---
 				Container@ROW:
 					Width: PARENT_RIGHT - 24
 					Height: 30
