--- a/mods/ts/weapons/ballisticweapons.yaml
+++ b/mods/ts/weapons/ballisticweapons.yaml
@@ -89,10 +89,10 @@
 		TrailSequences: idle2
 	Warhead@1Dam: Spread3DDamage
 		Damage: 10500
-	Warhead@ShockWave:	ShockWave
-		Radius: 1c512
-		LifeTime: 11
-		Width: 0.11
+	# Warhead@ShockWave:	ShockWave
+	# 	Radius: 1c512
+	# 	LifeTime: 11
+	# 	Width: 0.11
 
 120mmx:
 	Inherits: ^Cannon
@@ -101,10 +101,11 @@
 	# BurstDelays: 5
 	Warhead@1Dam: Spread3DDamage
 		Damage: 8000
-	Warhead@ShockWave:	ShockWave
-		Radius: 1c256
-		LifeTime: 12
-		Width: 0.11
+	# Warhead@ShockWave:	ShockWave
+	# 	Radius: 1c256
+	# 	LifeTime: 12
+	# 	Width: 0.11
+
 
 RPGTower:
 	Inherits: ^Cannon
@@ -142,10 +143,17 @@ RPGTower:
 		Explosions: large_clsn
 	Warhead@BlueTibChainReact: TerrainReactionInit
 		Chance: 40
-	Warhead@ShockWave:	ShockWave
-		Radius: 2c0
-		LifeTime: 12
-		Width: 0.11
+	# Warhead@ShockWave:	ShockWave
+	# 	Radius: 2c0
+	# 	LifeTime: 12
+	# 	Width: 0.11
+	Warhead@ShockWave:	CreateEffect #ShockWave
+		Image: shockground
+		Explosions: shockgroundarti
+		ExplosionPalette: twist
+		ForceDisplayAtGroundLevel: true
+		ImpactActors: false
+		AirThreshold: 625
 
 TitanRPG:
 	Inherits: RPGTower
@@ -198,10 +206,17 @@ TitanRPG:
 		ImpactSounds: expnew06.aud
 	Warhead@4Smu: LeaveSmudge
 		SmudgeType: LargeCrater
-	Warhead@ShockWave:	ShockWave
-		Radius: 2c0
-		LifeTime: 13
-		Width: 0.11
+	# Warhead@ShockWave:	ShockWave
+	# 	Radius: 2c0
+	# 	LifeTime: 13
+	# 	Width: 0.11
+	Warhead@ShockWave:	CreateEffect #ShockWave
+		Image: shockground
+		Explosions: shockgroundarti
+		ExplosionPalette: twist
+		ForceDisplayAtGroundLevel: true
+		ImpactActors: false
+		AirThreshold: 625
 
 155mmDeployCheck:
 	Inherits: ^ArtilleryDeployCheck
@@ -229,10 +244,17 @@ Jugg90mm:
 	Warhead@2Eff: CreateEffect
 		Explosions: small_explosion
 		ImpactSounds: expnew13.aud
-	Warhead@ShockWave:	ShockWave
-		Radius: 1c256
-		LifeTime: 11
-		Width: 0.11
+	# Warhead@ShockWave:	ShockWave
+	# 	Radius: 1c256
+	# 	LifeTime: 11
+	# 	Width: 0.11
+	Warhead@ShockWave:	CreateEffect #ShockWave
+		Image: shockground
+		Explosions: shockgroundcannon
+		ExplosionPalette: twist
+		ForceDisplayAtGroundLevel: true
+		ImpactActors: false
+		AirThreshold: 625
 
 Jugg90mmDeployCheck:
 	Inherits: ^ArtilleryDeployCheck
