--- a/mods/ts/weapons/superweapons.yaml
+++ b/mods/ts/weapons/superweapons.yaml
@@ -344,11 +344,17 @@ IonCannon:
 		Delay: 7
 		Weapon: BlueTiberiumChainReaction
 		ValidTargets: BlueTiberium
-	Warhead@ShockWave:	ShockWave
+	Warhead@ShockWave:	CreateEffect #ShockWave
+		Image: shockground
+		Explosions: shockground
+		ExplosionPalette: twist
+		ForceDisplayAtGroundLevel: true
+		ImpactActors: false
 		Delay: 3
-		Radius: 4c0
-		LifeTime: 30
-		Width: 0.14
+		# Radius: 4c0
+		# LifeTime: 30
+		# Width: 0.14
+
 
 EMPulseCannon:
 	ReloadDelay: 100
@@ -372,10 +378,12 @@ EMPulseCannon:
 		Duration: 250
 		Condition: empdisable
 		ValidTargets: Ground, Water, Air, Underground
-	Warhead@ShockWave:	ShockWave
-		Radius: 8c0
-		LifeTime: 40
-		Width: 0.2
+	# Warhead@ShockWave:	ShockWave
+	# 	Radius: 8c0
+	# 	LifeTime: 40
+	# 	Width: 0.2
+
+
 
 TestCrystalGrow:
 	Warhead@Res: CreateResource
