稍微修改扭曲的noise坐标系

--- a/mods/common/chrome/ingame-perf.yaml
+++ b/mods/common/chrome/ingame-perf.yaml
@@ -3,7 +3,7 @@ Container@PERF_WIDGETS:
 	ClickThrough: true
 	Children:
 		Label@PERF_TEXT:
-			X: 85
+			X: WINDOW_RIGHT / 2
 			Y: 5
 			Width: 200
 			Height: 200
