优化一些效果，为步兵添加一个格子的反隐

--- a/mods/ts/rules/defaults.yaml
+++ b/mods/ts/rules/defaults.yaml
@@ -842,6 +842,8 @@
 		UseClassicPerspectiveFudge: False
 		CameraPitch: 85
 		QuantizedFacings: 8
+	DetectCloaked:
+		Range: 1c0
 
 ^RegularInfantryDeath:
 	WithDeathAnimation@normal:
