--- a/mods/ts/weapons/superweapons.yaml
+++ b/mods/ts/weapons/superweapons.yaml
@@ -97,6 +97,10 @@ ClusterMissile:
 		StartOffset: 0,3333,0
 		FireCount: 3
 		ForceTargetGround: true
+	Warhead@Spawn: SpawnActor
+		Actors: swvisiondummy10
+		Range: 3
+		AirThreshold: 111c0
 	# Warhead@ClusterMid: FireRadius
 	# 	Weapon: MultiCluster
 	# 	StartOffset: 0,0,0
@@ -146,6 +150,10 @@ ChemicalMissile:
 		StartOffset: 0,-2222,0
 		FireCount: 3
 		ForceTargetGround: true
+	Warhead@Spawn: SpawnActor
+		Actors: swvisiondummy8
+		Range: 3
+		AirThreshold: 111c0
 
 ChemicalCluster:
 	Inherits: ^VectorBooster
